--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -49,11 +49,11 @@ secrets:
 
 ldap:
   host: "192.168.99.100"
-  port: 389 #389 without ssl, 636 with ssl
-  baseDn: "dc=corp,dc=example,dc=com" #ldap:dc=example,dc=org ad:dc=samdom,dc=local
-  username: "cn=Administrator,dc=corp,dc=example,dc=com"
+  port: 636 #389 without ssl, 636 with ssl
+  baseDn: "dc=example,dc=org"
+  username: "cn=admin,dc=example,dc=org"
   password: "ThisIsMyAdminPassword1"
-  ssl: false
+  ssl: true
   timeout: 0
   enabled: ${flags.use.ldap}
 
