Add in AESUtil for encrypt/decrypt that is compliant with openssl

--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ flags:
     ssl: true
     http2: true
     jdbc: true
-    ldap: true
+    ldap: false
 
 server.ssl:
   key-store: classpath:server.p12
